finished basic comments

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,5 +10,16 @@
       <li><%= sub.title %></li>
     <% end %>
   </ul>
-  
 <% end %>
+
+<h2>All the comments</h2>
+<% if @comments %>
+  <ul>
+    <% @comments.each do |comment| %>
+      <li><%= comment.content %>
+          Posted by: <%= comment.author.username%>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
+<%= link_to "Create new comment", new_post_comment_url(@post) %>
