--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,12 @@
-<li><%= comment.content %><%= link_to "link to #{comment.content}",comment_url(comment) %><%= comment.author.username %><% comment.created_at %></li>
-  <ul><% all_comments.each do |child_comment| %>
-      <%= render "comments/comment", comment: child_comment, all_comments: all_comments if child_comment.parent_comment_id == comment.id %>
-      <% end %>
-  </ul>
+<li>
+  <%= comment.content %>
+  <%= link_to "link to #{comment.content}",comment_url(comment) %>
+  <%= comment.author.username %><%= comment.created_at %>
+</li>
+<ul>
+  <% all_comments[comment.id].each do |child_comment| %>
+    <%= render "comments/comment", 
+                comment: child_comment, 
+                all_comments: all_comments %>
+    <% end %>
+</ul>
