--- a/app/views/subs/new.html.erb
+++ b/app/views/subs/new.html.erb
@@ -9,3 +9,5 @@
     action: action,
     submit_msg: submit_msg,
     sub: @sub %>
+<br>
+<%= link_to "Back to user profile", user_url(current_user) %>
