--- a/app/views/subs/show.html.erb
+++ b/app/views/subs/show.html.erb
@@ -1,7 +1,9 @@
 <h1><%= @sub.title %></h1>
+
 <% if current_user == @sub.moderator %>
   <%= link_to "Edit Sub", edit_sub_url %>
 <% end %>
+
 <h2>Posts</h2>
 <ul>
   <% @posts.each do |post|%>
@@ -9,7 +11,9 @@
   <% end %>
 </ul>
 <br>
-<h3>Create a Post</h3>
-<%= link_to "Create a Post", new_post_url %>
+<% if current_user %>
+  <h3>Create a Post</h3>
+  <%= link_to "Create a Post", new_post_url %>
+<% end %>
 <br>
 <%= link_to "Back to subs list", subs_url %>
