--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,7 @@
-<h1><%= @post.title %> By: <%= @post.author.username %> </h1>
-<%= link_to('Edit Post', edit_post_url)%>
+<h1>Post <%= @post.title %> By: <%= @post.author.username %> </h1>
+<% if current_user == @post.author %>
+  <%= link_to('Edit Post', edit_post_url)%>
+<% end %>
 <br>
 
 
@@ -22,5 +24,8 @@
     <% end %>
   </ul>
 <% end %>
-
-<%= link_to "Create new comment", new_post_comment_url(@post) %>
+<% if current_user %>
+  <%= link_to "Create new comment", new_post_comment_url(@post) %>
+<% end %>
+<br>
+<%= link_to "Back to all subs", subs_url %>
