--- a/app/views/subs/index.html.erb
+++ b/app/views/subs/index.html.erb
@@ -5,4 +5,8 @@
   <% end %>
 </ul>
 <br>
-<%= link_to "Create a sub", new_sub_url %>
+<% if current_user %>
+  <%= link_to "Create a sub", new_sub_url %>
+<h3>Back to user's profile</h3>
+  <%= link_to "Back to user profile", user_url(current_user) %>
+<% end %>
